[gd_scene load_steps=4 format=3 uid="uid://results001"]

[ext_resource type="Script" path="res://scenes/results.gd" id="1_results"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 48

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_results")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.4, 0.25, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_title")
text = "Level Complete!"
horizontal_alignment = 1

[node name="StarsLabel" type="RichTextLabel" parent="VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
bbcode_enabled = true
text = "★ ★ ★"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ScoreLabel" type="Label" parent="VBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_score")
text = "Score: 0"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Catches: 0 / 0 (0%)"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Great job!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ReplayButton" type="Button" parent="VBox/ButtonContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="NextButton" type="Button" parent="VBox/ButtonContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Next Level"

[node name="MenuButton" type="Button" parent="VBox/ButtonContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu"
